# SanctumChat-service

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  todo.md
docker/: Dockerfile  docker-compose-dependencies.yml  upload.sh
internal/: appstate.rs  appstate_test.rs  config.rs  logging.rs  main.rs  models_test.rs  router.rs
internal/entities/: mod.rs
internal/entities/friend_requests/: friend_requests.rs  friend_requests_test.rs
internal/entities/friends/: controller.rs  repository.rs  service.rs
internal/entities/messages/: controller.rs  messages.rs
internal/entities/users/: controller.rs  users.rs
internal/handler/: version_handler.rs  ws_handler.rs
internal/handler/socket_handler/: ws_handle_direct.rs  ws_receive_handler.rs
internal/helper/: errors.rs  jwt.rs  keys.rs  mod.rs  session.rs  session_test.rs
internal/interfaces/http/: mod.rs  router.rs
internal/interfaces/websockets/: mod.rs  socket_messages.rs  ws_receive_handler.rs
internal/middlewares/: auth.rs  token.rs
internal/persistence/: connection_manager.rs
internal/scheduler/: active_session_check.rs  mod.rs  session_cleanup.rs
internal/tests/: setup.rs
internal/validation/: mod.rs
migrations/2023-11-12-204530_create_root/: down.sql  up.sql
migrations/2023-11-13-005124_create_users/: down.sql  up.sql
migrations/2023-11-19-195049_init_messages_table/: up.sql
migrations/2023-11-21-202539_init_friend_requests/: down.sql  up.sql
migrations/2024-01-20-155016_add_message_read_field/: down.sql  up.sql
src/: config.rs  logging.rs  main.rs  models.rs  person.rs  router.rs  schema.rs
src/domain/: friend_domain.rs  friend_request_domain.rs  friend_request_domain_test.rs  message_domain.rs  message_domain_test.rs  mod.rs  test_user_domain.rs  user_domain.rs  user_domain_test.rs
src/entities/friend_requests/: mod.rs  repository.rs
src/handler/: friend_handler.rs  message_handler.rs  mod.rs  user_handler.rs  version_handler.rs  ws_handler.rs
src/helper/: errors.rs  hashing.rs  jwt.rs  jwt_test.rs  keys.rs  mod.rs  pagination.rs  session.rs  sql.rs
src/middlewares/: auth.rs  cookies.rs  mod.rs  token.rs
src/repositories/: friend_repository.rs  friend_request_repository.rs  message_repository.rs  mod.rs  user_repository.rs
src/utils/: jwt.rs
src/validation/: mod.rs  string_validate.rs
tests/: requirements.txt
tests/credentials/: test-user-1.pem  test-user-1.pub.pem  test-user-2.pem  test-user-2.pub.pem
tests/websocket/: constants.py  dual_connection_tests.py  single_connection_tests.py  test.py  utils.py
(+18 files in other folders)
