[package]
name = "rust-websocket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"]}
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
serde_json = "1"
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15"
proc-macro2 = "1.0"
quote = "1.0"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
syn = "2.0.39"
futures = "0.3"
jwt = "0.16.0"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
cookie = "0.18.0"
axum-util = { version = "0.2.2" }
tower-http = { version = "0.4.4", features = ["cors"] }

[lib]
crate-type = ["proc-macro"]
