[package]
name = "sanctumchat-service"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sanctumchat-service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.2", features = ["ws"]}
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
serde_json = "1"
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15"
openssl = { version = "0.10.60", features = [] }
base64 = { version = "0.21.5", features = [] }
proc-macro2 = "1.0"
quote = "1.0"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
syn = "2.0.39"
futures = "0.3"
jwt = "0.16.0"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
cookie = "0.18.0"
axum-util = { version = "0.2.2" }
tower-http = { version = "0.5.0", features = ["cors"] }
async-trait = "0.1.74"
regex = "1.10.2"

